# arduino-iot

./: .gitignore
ArduinoIot/: platformio.ini
ArduinoIot/src/: main.cpp
IotArduino2/: platformio.ini
IotArduino2/include/: README  main.h
IotArduino2/src/: main.cpp
RecognitionApi/: Dockerfile  nixpacks.toml  pyproject.toml
RecognitionApi/app/: main.py  utils.py
RecognitionWeb/: index.html
RecognitionWeb/js/: door-control.js  image-upload.js  video-login.js
Server/: .gitignore  main.py  requirements.txt
Server/templates/: index.html  iot.html
Web Recognition/: styles.css
Web Recognition/js/: app.js  door-control.js  image-upload.js  tabs.js  video-login.js
