[project]
name = "recognitionapi"
version = "0.1.0"
description = "A Python package for the Recognition API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepface>=0.0.93",
    "fastapi[standard]>=0.115.12",
    "tensorflow>=2.14.0",
    "tf-keras>=2.19.0",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = ["ruff>=0.11.4"]
